Fixed overflow error

--- a/eNote/static/stylesheets/base.css
+++ b/eNote/static/stylesheets/base.css
@@ -7,15 +7,13 @@ html,
 body {
     width: 100%;
     height: 100%;
-    overflow: hidden;
     margin: 0;
     margin-top: 60px;
     font-family: "Roboto", sans-serif !important;
     font-weight: 300;
-    overflow-y: auto;
 }
 
-.navbar-backgroud{
+.navbar-backgroud {
     background: rgba(255, 255, 255, 0.75);
     backdrop-filter: blur(50px);
     -webkit-backdrop-filter: blur(50px);
